[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/CutScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/Glider.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sounds/start-flight.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Scenes/Background.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="Environment" id=2]
background_mode = 1
background_color = Color( 0.905882, 0.905882, 0.905882, 1 )
ambient_light_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="CutScene" type="Spatial"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, 0, 1.2, -16 )

[node name="Background2" parent="." instance=ExtResource( 6 )]
transform = Transform( 2.13946, 0, -2.10303, 0, 3, 0, 2.10303, 0, 2.13946, -302.281, 0.1, 153.101 )

[node name="Plane" type="CSGBox" parent="."]
transform = Transform( 1000, 0, 0, 0, 0.1, 0, 0, 0, 300, 0, 0, 0 )
material = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 14.973, 4, 245 )
current = true
far = 1800.0

[node name="Glider" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 330.756 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="SoundTimer" type="Timer" parent="."]
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_SoundTimer_timeout"]
